--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
 VERSION_NAME=0.1.5
 VERSION_CODE=5
 GROUP_ID=xyz.danoz
-
 POM_DESCRIPTION=FastScroller for the Android RecyclerView widget
 POM_URL=https://github.com/danoz73/RecyclerViewFastScroller
 POM_SCM_URL=https://github.com/danoz73/RecyclerViewFastScroller
@@ -12,3 +11,4 @@ POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
 POM_DEVELOPER_ID=danoz73
 POM_DEVELOPER_NAME=Daniel Smith
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
