--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 // Top-level build file for configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.android.tools.build:gradle:8.1.1'
         // Do not place application dependencies here.
         // They belong in the individual module build.gradle files
     }
@@ -13,13 +13,13 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
 }
 
 ext {
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.2'
+    compileSdkVersion = 33
     supportLibsVersion = '23.3.0'
     androidSupportGroup = 'com.android.support'
     targetSdkVersion = 23
