--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ allprojects {
 
 ext {
     compileSdkVersion = 33
-    supportLibsVersion = '23.3.0'
-    androidSupportGroup = 'com.android.support'
     targetSdkVersion = 23
+    appcompatVersion = '1.6.1'
+    recyclerViewVersion = '1.3.1'
     minSdkVersion = 14
     versionCode = 9
     versionName = "0.2.3"
