--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ POM_LICENSE_DIST=repo
 POM_DEVELOPER_ID=danoz73
 POM_DEVELOPER_NAME=Daniel Smith
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
+android.useAndroidX=true
+android.enableJetifier=false
